agregue el slider y saltos de linea

--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,12 @@
                     </div>
                 </div>
             </div>
+            <hr class="jump">
+            <!--esta es la imagen grande que lleva al portafolio-->
+            <div id="slider">
+                <img src="../img/img.jpg" alt="slider">
+            </div>
+            <hr class="jump">
         </div>
     </body>
     
