--- a/html/index.html
+++ b/html/index.html
@@ -36,12 +36,74 @@
                     </div>
                 </div>
             </div>
-            <hr class="jump">
-            <!--esta es la imagen grande que lleva al portafolio-->
-            <div id="slider">
-                <img src="../img/img.jpg" alt="slider">
+            <!--este es el main-->
+            <div id="main">
+                <hr class="jump">
+                <!--esta es la imagen grande que lleva al portafolio-->
+                <div id="slider">
+                    <img src="../img/img.jpg" alt="slider">
+                </div>
+                <hr class="jump">
+                <div id="info">
+                    <div id="about">
+                        <h2 id="aboutUs"><img src="../img/arrow.png" alt="arrow"> ABOUT US </h2>
+                        <div class="jumpMain">
+                            <hr>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro corrupti doloremque maxime nulla quas nemo ratione labore autem aspernatur dolorum animi provident aliquam ad, nobis maiores, laudantium esse laboriosam vel?</p>
+                        <a href="#"><img src="../img/arrow.png" alt="arrow"> <strong>READ</strong> </a>
+                    </div>
+                    <div id="benefits">
+                        <h2 id="ourBenefits"><img src="../img/arrow.png" alt="arrow">OUR BENEFITS</h2>
+                        <div class="jumpMain">
+                            <hr>
+                        </div>
+                        <ul id="benefitsList">
+                            <li id="subBenefitsList"><img src="../img/check.png" alt=""> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi officia totam, sapiente incidunt ea cum! Soluta, impedit. Adipisci natus esse modi voluptatibus saepe nulla beatae at, aspernatur possimus, est aliquam?</li>
+                            <li id="subBenefitsList"><img src="../img/check.png" alt=""> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi officia totam, sapiente incidunt ea cum! Soluta, impedit. Adipisci natus esse modi voluptatibus saepe nulla beatae at, aspernatur possimus, est aliquam?</li>
+                            <li id="subBenefitsList"><img src="../img/check.png" alt=""> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi officia totam, sapiente incidunt ea cum! Soluta, impedit. Adipisci natus esse modi voluptatibus saepe nulla beatae at, aspernatur possimus, est aliquam?</li>
+                        </ul>
+                        <h2 id="testimonials"><img src="../img/arrow.png" alt="arrow">TESTIMONIALS</h2>
+                        <div class="jumpMain">
+                            <hr>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, neque totam cumque recusandae ducimus ipsam corrupti iure error accusantium, fugiat repellendus? Magni sit eaque eos officia quae nam ut consequatur?</p>
+                        <p><strong>Rafi, Graphicsfuel.com</strong></p>
+                    </div>
+                </div>
+                <hr class="jump">
+                <div id="ourPortfolio">
+                    <h2 id="portfolio"><img src="../img/arrow.png" alt="arrow"> OUR PORTFOLIO</h2>
+                   <div id="img1"><img src="../img/portfolio1.jpg" alt="blog skin desings"></div>
+                   <div id="img2"><img src="../img/portfolio-2.jpg" alt="wp dreamland"></div>
+                   <div id="img3"><img src="../img/portfolio-3.jpg" alt="social worthy"></div>
+                   <div id="img4"><img src="../img/portfolio-4.jpg" alt="best moving quotes"></div>
+                </div>
+                <hr class="jump">
+                <div id="blog">
+                    <div id="subBlog">
+                        <h3 id="blogTitle"><img src="../img/arrow.png" alt="arrow">BLOG UPDATES</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea tempore incidunt nesciunt autem exercitationem eum, fugiat sed, est modi quae similique alias eius non velit accusantium dolorum consequatur ab qui.</p>
+                        <div id="conect">
+                            <h3 id="conectWithUs"><img src="../img/arrow.png" alt="arrow">CONECT WITH US</h3>
+                            <ul id="social">
+                                <li class="socialLogo">
+                                    <a href="#"><img src="../img/icono-tw.png" alt="twitter"></a>
+                                </li>
+                                <li class="socialLogo">
+                                    <a href="#"><img src="../img/iocno-blue.png" alt="facebook"></a>
+                                </li>
+                                <li class="socialLogo">
+                                    <a href="#"><img src="../img/icono-gray.png" alt="dos puntos"></a>
+                                </li>
+                                <li class="socialLogo">
+                                    <a href="#"><img src="../img/icono-orange.png" alt="blogspot"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <hr class="jump">
         </div>
     </body>
     
