finalice con el footer

--- a/html/index.html
+++ b/html/index.html
@@ -104,6 +104,32 @@
                     </div>
                 </div>
             </div>
+            <div id="footer">
+                <div id="subfooterList">
+                    <ul id="footerList">
+                        <li class="footerLinks">
+                            Home
+                        </li>
+                        <li class="footerLinks">
+                            About Us
+                        </li>
+                        <li class="footerLinks">
+                            portfolio
+                        </li>
+                        <li class="footerLinks">
+                            Services
+                        </li>
+                        <li class="footerLinks">
+                            Blog
+                        </li>
+                        <li class="footerLinks">
+                            Contact Us
+                        </li>
+                    </ul>
+                    <p id="copyRight">© 2010 CreativeStudio.All Rights Reserved</p>
+                </div>
+                <img src="../img/logo.png" alt="logotype">
+            </div>
         </div>
     </body>
     
